--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-icons": "^4.3.1",
     "react-pdf": "^5.4.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-script": "^2.0.5",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
